--- a/styles/styles.css
+++ b/styles/styles.css
@@ -126,7 +126,7 @@
 }
 header {
   background-color: #ffffff;
-  max-width: 1600px;
+  max-width: 1200px;
   width: 100%;
   margin: 0 auto;
   padding: 1.5rem 1rem;
@@ -295,7 +295,7 @@ header .headersize .disponiveltowork p {
 
 main {
   background-color: #ffffff;
-  max-width: 1600px;
+  max-width: 1200px;
   width: 100%;
   margin: 0 auto;
   padding: 1.5rem 1rem;
@@ -305,11 +305,17 @@ main {
 main .mainsize {
   padding: 12rem 0rem;
   display: flex;
+  justify-content: center;
+  text-align: center;
   align-items: center;
 }
 main .mainsize .textmain {
   width: 100%;
   margin-right: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 main .mainsize .textmain h1 {
   font-size: 4rem;
@@ -705,7 +711,7 @@ main .mainsize .textmain .textcircle {
   }
 }
 #projetos {
-  max-width: 1600px;
+  max-width: 1200px;
   width: 100%;
   margin: 0 auto;
   background-color: #ffffff;
@@ -715,6 +721,7 @@ main .mainsize .textmain .textcircle {
   font-size: 2rem;
   font-weight: 600;
   margin-bottom: 2rem;
+  text-align: center;
 }
 #projetos .textproject .row {
   display: flex;
@@ -723,11 +730,11 @@ main .mainsize .textmain .textcircle {
   gap: 50px;
 }
 #projetos .textproject .row .card {
-  width: 480px;
+  width: 350px;
 }
 #projetos .textproject .row .card .wrapper {
   background-color: #000;
-  height: 550px;
+  height: 400px;
   position: relative;
   overflow: hidden;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.2), 0 15px 12px rgba(0, 0, 0, 0.1);
@@ -739,7 +746,7 @@ main .mainsize .textmain .textcircle {
   position: absolute;
   bottom: 0;
   width: 100%;
-  transform: translateY(calc(130px + 1em));
+  transform: translateY(calc(145px + 1em));
   transition: transform 0.3s;
   z-index: 1;
 }
@@ -921,14 +928,54 @@ main .mainsize .textmain .textcircle {
 #sobre {
   background-color: #ffffff;
   display: flex;
-  max-width: 1600px;
+  flex-direction: column;
+  max-width: 1200px;
   width: 100%;
   margin: 0 auto;
   padding: 1.5rem 1rem;
 }
-#sobre h1 {
+#sobre .titlesobre {
   font-size: 2rem;
   font-weight: 600;
+  text-align: center;
+}
+#sobre .introducingmyself {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  margin: 1rem 0rem;
+}
+#sobre .introducingmyself img {
+  border-radius: 50% 50%;
+  height: 150px;
+  filter: grayscale(1);
+}
+#sobre .introducingmyself img:hover {
+  filter: grayscale(0);
+}
+#sobre .introducingmyself p {
+  max-width: 80ch;
+}
+#sobre .infosaboutme {
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+  margin-top: 2rem;
+}
+#sobre .infosaboutme h2 {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  margin-bottom: 0.7rem;
+  font-weight: bold;
+}
+#sobre .infosaboutme h3 {
+  margin-bottom: 3px;
+  font-size: 1.1rem;
+  text-transform: uppercase;
+}
+#sobre .infosaboutme p {
+  margin-bottom: 1rem;
 }
 
 @keyframes animationTextShow {
