--- a/sections/_about.scss
+++ b/sections/_about.scss
@@ -3,13 +3,53 @@
 #sobre {
     background-color: $color-bg;
     display: flex;
-    max-width: 1600px;
+    flex-direction: column;
+    max-width: 1200px;
     width: 100%;
     margin: 0 auto;
     padding: 1.5rem 1rem;
-    h1 {
+    .titlesobre {
         font-size: 2rem;
         font-weight: 600;
+        text-align: center;
+    }
+    .introducingmyself {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 50px;
+        margin: 1rem 0rem;
+        img {
+            border-radius: 50% 50%;
+            height: 150px;
+            filter: grayscale(1);
+            &:hover {
+                filter: grayscale(0);
+            }
+        }
+        p {
+            max-width: 80ch;
+        }
+    }
+    .infosaboutme {
+        display: flex;
+        justify-content: space-between;
+        gap: 50px;
+        margin-top: 2rem;
+        h2 {
+            font-size: 1.4rem;
+            text-transform: uppercase;
+            margin-bottom: .7rem;
+            font-weight: bold;
+        }
+        h3 {
+            margin-bottom: 3px;
+            font-size: 1.1rem;
+            text-transform: uppercase;
+        }
+        p {
+            margin-bottom: 1rem;
+        }
     }
 }
 
